5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1668_2969.log
== TEST (2019-04-15 19:25:03) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo >=125.0)
-- ERROR:
File "XXXX", line 4
    if(jogo >=125.0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:42) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo <=125.0)
-- ERROR:
File "XXXX", line 4
    if(jogo <=125.0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:48) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo==2)
-- ERROR:
File "XXXX", line 4
    if(jogo==2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:25) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo>=2)
-- ERROR:
File "XXXX", line 4
    if(jogo>=2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:38) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo>2)
-- ERROR:
File "XXXX", line 4
    if(jogo>2)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:58) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo!=2)
-- ERROR:
File "XXXX", line 4
    if(jogo!=2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:15) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo)
-- ERROR:
File "XXXX", line 4
    if(jogo)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:05) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p1):
	meg = 
 
-- ERROR:
File "XXXX", line 5
    meg = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:23) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = 
 
-- ERROR:
File "XXXX", line 5
    meg = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:24) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
 
-- ERROR:
File "XXXX", line 5
    meg = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:28) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p2 + p1*25/100
	total = meg
	print(round(total,1))
 
-- OUTPUT:
114.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:11) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1 + p2*25/100
	total = meg
	print(round(total,1))
 
-- OUTPUT:
80.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:09) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2
	total = meg
	print(round(total,1))
 
-- OUTPUT:
114.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:57) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,1))
 
-- OUTPUT:
126.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:41:17) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,1))
 
-- EXECUTION TIME:
0.292503
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.6
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:41:59) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.115935
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.62
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:06) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.235316
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.62
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:08) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- OUTPUT:
126.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:11) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.181661
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.62
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:12) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.185582
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.62
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
126.62
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:13) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.185841
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
126.62
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
126.62
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:13) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.30239
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
157.75
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
157.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:13) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(p1>p2):
	meg = p1 + p2*25/100
	total = meg
else:
	meg = p1*25/100 + p2 + 12.5
	total = meg
	print(round(total,2))
 
-- EXECUTION TIME:
0.199645
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1668/2969/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:12) 
-- CODE:
jogo = int(input("quatidade:"))
p1 = float(input("preco do primeiro jogo:"))
p2 = float(input("preco do segundo jogo:"))
if(jogo==1):
	valor = p1 
else:
	valor = p1 + p2 *25/100
	print(round(valor,2))
 
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
